join group added, events displayed on home page

--- a/Groupathon/app/src/main/res/layout/singlerow_listall.xml
+++ b/Groupathon/app/src/main/res/layout/singlerow_listall.xml
@@ -19,7 +19,6 @@
         android:layout_alignTop="@+id/imageView"
         android:layout_marginStart="-10dp"
         android:layout_toEndOf="@+id/imageView"
-        android:text="TextView"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
 
     <TextView
@@ -28,8 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/imageView"
         android:layout_marginStart="-10dp"
-        android:layout_toEndOf="@+id/imageView"
-        android:text="TextView" />
+        android:layout_toEndOf="@+id/imageView" />
 
 
 </RelativeLayout>
