--- a/Groupathon/app/src/main/res/layout/navigation_header.xml
+++ b/Groupathon/app/src/main/res/layout/navigation_header.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="140dp"
     android:layout_height="140dp"
     android:background="@color/colorAccent"
-    android:paddingLeft="20dp"
-    android:paddingTop="15dp"
-    >
+    android:layout_gravity="center_horizontal">
 
 
 
