--- a/Groupathon/app/src/main/res/layout/category_groups.xml
+++ b/Groupathon/app/src/main/res/layout/category_groups.xml
@@ -17,8 +17,8 @@
 
         <TextView
             android:id="@+id/groupName"
-            android:layout_width="250dp"
-            android:layout_height="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="20dp"
             android:padding="2dp" />
