--- a/Groupathon/app/src/main/res/layout/group_members.xml
+++ b/Groupathon/app/src/main/res/layout/group_members.xml
@@ -18,7 +18,7 @@
         <TextView
             android:id="@+id/item"
             android:layout_width="250dp"
-            android:layout_height="20dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="20dp"
             android:padding="2dp" />
