--- a/Groupathon/app/src/main/res/layout/group_itemchecklist.xml
+++ b/Groupathon/app/src/main/res/layout/group_itemchecklist.xml
@@ -8,11 +8,6 @@
         android:id="@+id/item"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:paddingLeft="70dp"
+        android:gravity="center"
         android:layout_weight="1" />
-    <CheckBox
-        android:id="@+id/checkBox"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_weight="2" />
 </LinearLayout>
