splash screen changed

--- a/Groupathon/app/src/main/res/layout/activity_splash_screen.xml
+++ b/Groupathon/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SplashScreen"
-    android:background="#FFB74D">
+    android:background="#F57C00"
+    tools:context=".SplashScreen">
 
     <FrameLayout
         android:layout_width="match_parent"
