--- a/Groupathon/app/src/main/res/layout/group_details.xml
+++ b/Groupathon/app/src/main/res/layout/group_details.xml
@@ -13,73 +13,107 @@
          android:minHeight="?attr/actionBarSize"
          android:id="@+id/toolbar">
      </android.support.v7.widget.Toolbar>-->
-    <TextView
-        android:id="@+id/Eventdate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="20dp"
-        android:text="Event Date :"
-        android:textColor="@color/common_google_signin_btn_text_dark_focused"
-        android:textSize="20dp" />
+    <!--<TextView-->
+    <!--android:id="@+id/Eventdate"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginLeft="20dp"-->
+    <!--android:layout_marginRight="20dp"-->
+    <!--android:layout_marginTop="20dp"-->
+    <!--android:text="Event Date :"-->
+    <!--android:textColor="@color/common_google_signin_btn_text_dark_focused"-->
+    <!--android:textSize="20dp" />-->
 
-    <TextView
-        android:id="@+id/Date"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_toRightOf="@id/Eventdate"
-        android:text="Date"
-        android:textColor="@color/common_google_signin_btn_text_dark_focused"
-        android:textSize="20dp" />
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/dateimage"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/calender"/>
 
-    <TextView
-        android:id="@+id/Eventlocation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="20dp"
-        android:text="Meet up place :"
-        android:layout_below="@id/Eventdate"
-        android:textColor="@color/common_google_signin_btn_text_dark_focused"
-        android:textSize="20dp" />
+        <TextView
+            android:id="@+id/Date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_toRightOf="@id/dateimage"
+            android:layout_marginLeft="15dp"
+            android:text="Date"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:textSize="20dp" />
 
-    <TextView
-        android:id="@+id/Location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_below="@id/Eventdate"
-        android:layout_toRightOf="@id/Eventlocation"
-        android:text="location"
-        android:textColor="@color/common_google_signin_btn_text_dark_focused"
-        android:textSize="20dp" />
 
-    <TextView
-        android:id="@+id/details"
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_below="@id/Eventlocation"
-        android:text="Details"
-        android:textColor="@color/common_google_signin_btn_text_dark_focused"
-        android:textSize="20dp" />
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/locationimage"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="55dp"
+            android:src="@drawable/location" />
+
+        <TextView
+            android:id="@+id/Location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/Date"
+            android:layout_marginTop="60dp"
+            android:layout_marginLeft="15dp"
+            android:text="location"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:textSize="20dp" />
+
+    </LinearLayout>
+
+
+    <!--<TextView-->
+    <!--android:id="@+id/Eventlocation"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginLeft="20dp"-->
+    <!--android:layout_marginRight="20dp"-->
+    <!--android:layout_marginTop="20dp"-->
+    <!--android:text="Meet up place :"-->
+    <!--android:layout_below="@id/Eventdate"-->
+    <!--android:textColor="@color/common_google_signin_btn_text_dark_focused"-->
+    <!--android:textSize="20dp" />-->
+
+
+    <!-- <TextView
+         android:id="@+id/details"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_marginLeft="20dp"
+         android:layout_marginRight="20dp"
+         android:layout_marginTop="20dp"
+         android:layout_below="@id/Location"
+         android:text="Details"
+         android:textColor="@color/common_google_signin_btn_text_dark_focused"
+         android:textSize="20dp" />-->
     <TextView
         android:id="@+id/detail_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="15dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="120dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_below="@id/details"/>
+        android:layout_marginRight="20dp"/>
     <View
         android:layout_width="wrap_content"
         android:layout_height="1dp"
+        android:layout_marginTop="20dp"
         android:layout_below="@+id/detail_text"
         android:background="@color/common_google_signin_btn_text_dark_focused"/>
 
@@ -89,6 +123,7 @@
         android:layout_height="wrap_content"
         android:divider="@drawable/custom_lines"
         android:dividerHeight="1dp"
+        android:layout_marginTop="20dp"
         android:layout_below="@+id/detail_text">
     </ListView>
     <View
@@ -98,4 +133,7 @@
         android:background="@color/common_google_signin_btn_text_dark_focused"/>
 
 
+
+
 </RelativeLayout>
+
