--- a/Groupathon/app/src/main/res/layout/join_group.xml
+++ b/Groupathon/app/src/main/res/layout/join_group.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".join_group">
 
-    <TextView
+    <!--<TextView
         android:id="@+id/Eventdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -47,9 +47,61 @@
         android:layout_below="@id/Eventdate"
         android:layout_toRightOf="@id/Eventlocation"
         android:textColor="@color/common_google_signin_btn_text_dark_focused"
-        android:textSize="20dp" />
+        android:textSize="20dp" />-->
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/dateimage"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/calender"/>
 
-    <TextView
+        <TextView
+            android:id="@+id/Date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_toRightOf="@id/dateimage"
+            android:layout_marginLeft="15dp"
+            android:text="Date"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:textSize="20dp" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/locationimage"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="55dp"
+            android:src="@drawable/location" />
+
+        <TextView
+            android:id="@+id/Location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/Date"
+            android:layout_marginTop="60dp"
+            android:layout_marginLeft="15dp"
+            android:text="location"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:textSize="20dp" />
+
+    </LinearLayout>
+
+    <!--<TextView
         android:id="@+id/details"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -59,16 +111,15 @@
         android:layout_below="@id/Location"
         android:text="Details"
         android:textColor="@color/common_google_signin_btn_text_dark_focused"
-        android:textSize="25dp" />
+        android:textSize="25dp" />-->
     <TextView
         android:id="@+id/detail_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="15dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="120dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_below="@id/details"/>
+        android:layout_marginRight="20dp" />
 
     <Button
         android:id="@+id/join_button"
@@ -76,7 +127,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/detail_text"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="30dp"
         android:background="@color/colorAccent"
         android:text="join" />
 
