home button added

--- a/Groupathon/app/src/main/res/layout/group_checklistview.xml
+++ b/Groupathon/app/src/main/res/layout/group_checklistview.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/addItem"
+        android:layout_marginTop="15dp"
         android:hint="Important items to carry"
         android:selectAllOnFocus="false">
     </EditText>
@@ -21,14 +22,17 @@
         android:id="@+id/addItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
         android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
         android:text="Add" />
 
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText" >
+        android:layout_below="@+id/editText">
     </ListView>
 
 </RelativeLayout>
