--- a/Groupathon/app/src/main/res/layout/category_groups.xml
+++ b/Groupathon/app/src/main/res/layout/category_groups.xml
@@ -17,6 +17,8 @@
 
         <TextView
             android:id="@+id/groupName"
+            android:textSize="20dp"
+            android:textColor="@color/color_black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
