--- a/Groupathon/app/src/main/res/layout/group_members.xml
+++ b/Groupathon/app/src/main/res/layout/group_members.xml
@@ -17,10 +17,12 @@
 
         <TextView
             android:id="@+id/item"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:textColor="@color/color_black"
+            android:textSize="20dp"
+            android:gravity="center_vertical"
+            android:layout_height="match_parent"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="20dp"
             android:padding="2dp" />
 
     </LinearLayout>
