--- a/Groupathon/app/src/main/res/values/colors.xml
+++ b/Groupathon/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#F57C00</color>
     <color name="colorAccent">#08AE9E</color>
     <color name="notify_red">#FF0000</color>
+    <color name="color_black">#000</color>
 </resources>
