--- a/Groupathon/app/src/main/res/layout/group_details.xml
+++ b/Groupathon/app/src/main/res/layout/group_details.xml
@@ -107,6 +107,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="15dp"
+        android:textColor="@color/color_black"
         android:layout_marginTop="120dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"/>
