--- a/Groupathon/app/src/main/res/layout/group_details.xml
+++ b/Groupathon/app/src/main/res/layout/group_details.xml
@@ -128,6 +128,7 @@
         android:layout_below="@+id/detail_text">
     </ListView>
     <View
+        android:id="@+id/secondline"
         android:layout_width="wrap_content"
         android:layout_height="1dp"
         android:layout_below="@+id/list_items"
